<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/t_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/nombre"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="390dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:hint="Identificación del lugar"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/t_nombre">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/t_tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tipo"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nombre" />

        <Spinner
            android:id="@+id/tipo"
            android:layout_width="150dp"
            android:layout_height="24dp"
            android:minHeight="48dp"
            app:layout_constraintLeft_toRightOf="@id/t_tipo"
            app:layout_constraintTop_toTopOf="@id/t_tipo" />

        <TextView
            android:id="@+id/t_direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/direcci_n"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/t_tipo" />

        <EditText
            android:id="@+id/direccion"
            android:layout_width="390dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/t_direccion" />

        <TextView
            android:id="@+id/t_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/telefono"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/direccion" />

        <EditText
            android:id="@+id/telefono"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="Número de contacto"
            android:inputType="phone"
            android:minHeight="48dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/t_telefono"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@id/t_telefono"
            app:layout_constraintStart_toEndOf="@+id/t_telefono" />

        <TextView
            android:id="@+id/t_latitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:text="@string/latitud"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/telefono" />

        <EditText
            android:id="@+id/latitud"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="8dp"
            android:hint="Coordenada de latitud"
            android:inputType="numberDecimal"
            app:layout_constraintBaseline_toBaselineOf="@+id/t_latitud"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.01"
            app:layout_constraintLeft_toRightOf="@id/t_latitud"
            app:layout_constraintStart_toEndOf="@+id/t_latitud"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/t_longitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/longitud"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/latitud" />

        <EditText
            android:id="@+id/longitud"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="Coordenada de longitud"
            android:inputType="numberDecimal"
            app:layout_constraintBaseline_toBaselineOf="@+id/t_longitud"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@id/t_longitud"
            app:layout_constraintStart_toEndOf="@+id/t_longitud"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/t_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/url"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/longitud" />

        <EditText
            android:id="@+id/url"
            android:layout_width="390dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:hint="Página web del lugar"
            android:inputType="textUri"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/t_url" />

        <TextView
            android:id="@+id/t_comentario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/comentario"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/url" />

        <EditText
            android:id="@+id/comentario"
            android:layout_width="390dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:hint="Anotaciones sobre el lugar"
            android:inputType="textMultiLine"

            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/t_comentario" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>